Fix related widget height and buttons alignment when there is a multiline label.

--- a/admin_interface/static/admin_interface/css/widgets.css
+++ b/admin_interface/static/admin_interface/css/widgets.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-wrap: nowrap;
     white-space: nowrap;
+    height: fit-content;
 }
 /* end fix */
 
